<?xml version="1.0"?>
<package format="2">
  <name>heron_msgs</name>
  <version>0.0.1</version>
  <description>Heron msgs package</description>

  <maintainer email="harrisl@ethz.ch">Lucy Harris</maintainer>
  <author>Lucy Harris</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
